src/objects/DMA__c.object
<CustomObject>
    <description>Info for each Marketing DMA</description>
    <fields>
        <fullName>A5099__c</fullName>
        <description>Adults 55+ in DMA</description>
        <label>A5099</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <label>Common Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMA_Code__c</fullName>
        <description>The actual code for the DMA</description>
        <label>DMA Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_Kids__c</fullName>
        <label>DMA Kids</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_M_18_34__c</fullName>
        <label>DMA M 18-34</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_M_18_49__c</fullName>
        <label>DMA M 18-49</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_Rank__c</fullName>
        <description>DMA Rank</description>
        <label>DMA_Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_TV_HH_UE__c</fullName>
        <label>DMA TV HH UE</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_Teens__c</fullName>
        <label>DMA Teens</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_Tot_Men__c</fullName>
        <label>DMA Tot Men</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_Tot_Women__c</fullName>
        <label>DMA Tot Women</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_W_18_34__c</fullName>
        <label>DMA W 18-34</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_W_18_49__c</fullName>
        <label>DMA W 18-49</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M5099__c</fullName>
        <description>Men 55+ in DMA</description>
        <label>M5099</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_CC_TV_Homes_2015__c</fullName>
        <label>Percent of CC TV Homes 2015</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_US_TV_Homes__c</fullName>
        <label>Percent of US TV Homes</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Center_2015__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the primary center as of 2015</description>
        <label>Primary Center 2015</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>DMA (Primary Center 2015)</relationshipLabel>
        <relationshipName>DMA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the primary center within the DMA</description>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>DMA</relationshipLabel>
        <relationshipName>DMA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TVHH__c</fullName>
        <description>Total number of TV Households in DMA</description>
        <label>TVHH</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TV_Penetration__c</fullName>
        <label>TV Penetration</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_HH__c</fullName>
        <label>Total HH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>W5099__c</fullName>
        <description>Women 55+ in DMA</description>
        <label>W5099</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DMA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DMA_View</fullName>
        <columns>DMA_Rank__c</columns>
        <columns>NAME</columns>
        <columns>Common_Name__c</columns>
        <columns>Total_HH__c</columns>
        <columns>TVHH__c</columns>
        <columns>TV_Penetration__c</columns>
        <columns>DMA_Code__c</columns>
        <columns>Primary_Center__c</columns>
        <filterScope>Everything</filterScope>
        <label>DMA View</label>
    </listViews>
    <nameField>
        <label>DMA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>